bug 710581 - fixing GCC 4.6 warning. r=bhackett